update new file

--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
             <h3 class="section-title">Frontend</h3>
             <div class="service-list">
                 <div>
-                    <div class="card" onclick="window.location.href = '';">
+                    <div class="card" onclick="window.location.href = 'https://github.com/SjdartP/SajidAli_Portfolio.git';">
                         <div class="card9">
                             <div class="position">
                                 <img align="center" class="icon" src="imgpr/p1.png" width="190">
