update new file

--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
             <nav>
                 <img src="prof/Frame 68.png" class="logo" width="200px">
                 <ul id="sidemenu">
-                    <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#photographs">Arts</a></li>
@@ -76,7 +75,7 @@
     <div id="about">
         <div class="containers box">
             <div class="row">
-                <div class="col-1">5
+                <div class="col-1">
                     <h1 class="sub-title">About Me</h1>
 
                     <div class="sub-line">
@@ -90,7 +89,7 @@
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                         <p class="tab-links" onclick="opentab('education')">Education</p>
                         <p class="tab-links" onclick="opentab('others')">Tools</p>
-                        <p class="tab-links4" onclick="opentab('experience')">Resume</p>
+                        <p class="tab-links" onclick="opentab('experience')">Resume</p>
 
                     </div>
 
