update new file

--- a/index.html
+++ b/index.html
@@ -738,14 +738,14 @@
     </div>
     </div>
 
-
-
-
     <script src="js/animation.js"></script>
-
-
-
     <div class="end ">
+        <div class="qr-section">
+            <img src="prof/qr-code.png" alt="QR Code" class="qr-image">
+            <div>
+                <a href="https://qrlink.netlify.app/" target="_blank">Link Tree</a>
+            </div>
+        </div>
         <p>© 2024 Sajid Ali. All rights reserved.</p>
     </div>
 
