update new file

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                     </div>
                 </div>
                 <div class="col-2">
-                    <img src="prof/pp.jpg">
+                    <img src="prof/php1.png">
                 </div>
             </div>
         </div>
